--- a/service-worker/index.html
+++ b/service-worker/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
    <head></head>
        <body>
-       <p>Registration status: <strong id="status"></strong></p>
+       <p>Registration statuss: <strong id="status"></strong></p>
        <script>
           if ('serviceWorker' in navigator) {
            navigator.serviceWorker.register(
